# c-libs

./: CMakeLists.txt
src/: CMakeLists.txt  c-libs.h  logger.c  logger.h  safe_array.c  safe_array.h
tests/: CMakeLists.txt  logger.cpp  safe_array.cpp  test.hpp
